--- a/default.css
+++ b/default.css
@@ -3,35 +3,30 @@ body{
 
 }
 
-p{
-    position: absolute; top: 200px; left: 690px;
-    font-size: 25px;
-    font-style:normal;
-    font-family:monospace;
-}
-h1{
-    position: absolute; top: 20px; left: 310px;
-    font-size: 50px;
+#pic1 {position: absolute; top: 250px; left: 100px}
+
+
+h1{ position: absolute; top:20px; left: 400px;
+    font-size: 70px;
     font-style:normal;
     font-family: monospace;
 }
 h2{
-    position: absolute; top: 500px; left: 600px;
-    font-size: 25x;
+    position: absolute; top: 221px; left: 690px;
+    font-size: 25px;
     font-style:normal;
     font-family: monospace;
     
 }
 
+#pic2 {position: absolute; top: 850px; left:690px}
 
-img{
-    position: absolute; top: 310px; left: 90px;
-}
+
 
 
 
 h3{
-    position: absolute; top: 730px; left: 90px;
+    position: absolute; top: 730px; left: 100px;
     font-size: 25px;
     font-style: normal;
     font-family: monospace;
